# solarsage

./: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
data/docs/: cleaning_methods.md  commissioning_acceptance.md  connector_wiring_faults.md  degradation_mechanisms.md  electroluminescence_imaging.md  ground_faults_arc_faults.md  hotspots_faults.md  inverter_clipping_string_sizing.md  inverter_faults.md  iv_curve_tracing.md  module_cracking_delamination.md  monitoring_alarm_triage.md  performance_monitoring.md  pid_degradation.md  preventive_maintenance_schedule.md  safety_procedures.md  shading_vegetation.md  snow_ice_management.md  soiling_maintenance.md  thermographic_inspection.md  tracker_faults.md  weather_sensors_calibration.md
eval/: questions.json  run_eval.py
src/solarsage/: __init__.py  api.py  generate.py  ingest.py  retrieval.py
tests/: test_retrieval.py
