[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "solarsage"
version = "0.1.0"
description = "RAG assistant for solar PV fault diagnosis"
requires-python = ">=3.10"
dependencies = ["scikit-learn>=1.3", "fastapi>=0.110", "uvicorn>=0.29"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
